# caracal

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  ENTERPRISE.LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  config.example.yaml  docker-compose.gateway.yml  fix_audit_final.py  index.html  pyproject.toml  search-index.json  setup.py  sitemap.xml  test_cli.py
.github/: FUNDING.yml
.github/workflows/: codeql.yml  deploy.yml  scorecard.yml  test.yml
assets/css/: styles.38d64b75.css
assets/js/: 0596b55e.0082448f.js  075fbd6c.57dda17a.js  09f4e403.8ea1713d.js  0a668e5a.effe1fcd.js  0fc8d099.ccd117d8.js  17896441.78c84b2e.js  1a4e3797.14b37823.js  1d0b5a7c.9660aa19.js  21ad8f9c.b14dc3ec.js  2237.7ecdb1a2.js  22dd74f7.96f336bf.js  249e7d47.4cdba560.js  293017d9.6c9a0cf9.js  2e750adc.b4536756.js  3151.37fbf141.js  3646f520.c660443d.js  36e87950.1999a227.js  36eaf383.9621e856.js  3bb41a5c.5ea1c8e4.js  454f5e78.74ae6248.js  4d5e310d.f2515cc3.js  5124d7ea.878a78c6.js  52c388dd.144264bc.js  55c10201.be650103.js  569527ed.fec85282.js  5ae1ef6a.9e1a6b89.js  5e95c892.32c962ef.js  636d598e.34357c1d.js  6439e826.926e21be.js  653cc9e0.0e15cf0a.js  65f87347.31690bec.js  719801c1.1c7d9da7.js  734a3e07.43eb3413.js  746849a7.ef57aa6e.js  760599f7.9ffb4c09.js  80fa46d9.e283c2a8.js  831877e7.ca2c2c74.js  8aecee31.5d4629fc.js  8f287162.d3a3756a.js  92141ad4.9be6e812.js  (+22 more)
caracal/: __init__.py  _version.py  exceptions.py  logging_config.py
caracal-node/: package.json
caracal-node/src/: delegation.ts  extensions.ts  index.ts  mandates.ts
caracal/cli/: agent.py  allowlist.py  authority.py  authority_ledger.py  authority_policy.py  backup.py  cli_audit.py  config_encryption.py  db.py  delegation.py  deployment_cli.py  key_management.py  ledger.py  main.py  main_backup.py  mcp_service.py  merkle.py  migration.py  principal.py  provider_scopes.py  secrets.py  system_key.py  tool_registry.py
caracal/config/: ENVIRONMENT_VARIABLES.md  __init__.py  encryption.py  settings.py
caracal/core/: allowlist.py  audit.py  authority.py  authority_metadata.py  caveat_chain.py  crypto.py  delegation.py  delegation_graph.py  gateway_features.py  identity.py  ledger.py  lifecycle.py  mandate.py  metering.py  principal_keys.py  revocation.py  revocation_publishers.py  session_manager.py  signing_service.py  spawn.py  vault.py  vault_key_material.py
caracal/db/: authority_partition_manager.py  circuit_breaker_integration.py  connection.py  models.py  partition_manager.py  schema_version.py
caracal/deployment/: __init__.py  broker.py  config_manager.py  edition.py  edition_adapter.py  enterprise_license.py  enterprise_runtime.py  enterprise_sync.py  enterprise_sync_payload.py  exceptions.py  gateway_client.py  migration.py  mode.py  sync_engine.py  sync_state.py  version.py
caracal/enterprise/: __init__.py  license.py  sync.py
caracal/flow/: app.py  main.py  sdk_bridge.py  state.py  workspace.py
caracal/identity/: __init__.py  ais_server.py  attestation_nonce.py  principal_ttl.py  service.py
caracal/mcp/: README_SERVICE.md  __init__.py  adapter.py  service.py  tool_registry_contract.py
caracal/merkle/: README.md  signer.py
caracal/monitoring/: README.md  alertmanager.yaml  alerts.yaml  metrics.py
caracal/provider/: __init__.py  catalog.py  workspace.py
caracal/redis/: client.py
caracal/runtime/: entrypoints.py  hardcut_preflight.py  restricted_shell.py
caracal/sdk/: README.md  async_authority_client.py  authority_client.py  delegation.py  hooks.py  ledger.py  mandates.py  secrets.py
caracal/storage/: layout.py
deploy/: README.md  docker-compose.image.yml  docker-compose.yml
deploy/config/: config.example.yaml
deploy/docker/: Dockerfile.cli  Dockerfile.flow  Dockerfile.mcp  Dockerfile.runtime  runtime-entrypoint.sh
docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
docs/docs/: index.md
enterprise/access-auth/: index.html
enterprise/administration/: index.html
enterprise/configuration/: index.html
enterprise/deployment/: index.html
enterprise/getting-started/: index.html
enterprise/monitoring/: index.html
enterprise/overview/: index.html
enterprise/reference/: index.html
enterprise/troubleshooting/: index.html
examples/: authority_client_demo.py  database_retry_demo.py  mcp_adapter_demo.py  mcp_decorator_demo.py  sdk_client_demo.py
manage/: index.html
open-source/developers/: index.html
open-source/end-users/: index.html
open-source/overview/: index.html
reference/: index.html
resources/: index.html
scripts/: backup-postgresql.sh  build-images.sh  dev_gateway.py  event-replay-recovery.sh  hardcut_forbidden_marker_scan.py  hardcut_migration_safety_snapshot.py  release.sh  restore-postgresql.sh  verify_dependency_rules.py
sdk/: README.md
sdk/node-sdk/: README.md  package-lock.json  package.json  pnpm-lock.yaml
sdk/python/: __init__.py
sdk/python-sdk/: README.md
search/: index.html
tests/: QUICK_START.md  README.md  ci_simulation.sh  conftest.py  final_ci_validation.py  run_local_ci_test.py  simulate_ci.py  test_verification_manual.py  validate_all.py  validate_coverage.py  validate_structure.py  verify_imports.py  verify_naming_conventions.py  verify_test_structure.py
tests/fixtures/: __init__.py  authority.py  crypto.py  database.py  mandate.py  redis.py
tests/helpers/: crypto_signing.py
tests/integration/: test_enterprise_gateway_metering.py  test_mcp_adapter_enhanced.py
tests/mocks/: mock_gateway.py
tests/property/: test_agent_identity_properties.py  test_metering_event_properties.py
tests/security/: test_authority_bypass.py  test_crypto.py  test_rate_limiting.py
tests/unit/: test_authority_metadata.py  test_cli_agent_delegation.py  test_cli_audit.py  test_cli_db.py  test_cli_init.py  test_cli_logging_behavior.py  test_cli_main.py  test_config.py  test_config_manager.py  test_config_settings.py  test_core_imports.py  test_delegation.py  test_edition_manager.py  test_error_handling.py  test_exceptions.py  test_gateway_client.py  test_identity.py  test_import_verification.py  test_merkle_tree.py  (+20 more)
(+260 files in other folders)
