[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caracal-core"
dynamic = ["version"]
description = "Pre-execution authority enforcement system for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Caracal Contributors"}
]
keywords = ["ai", "agents", "authority", "enforcement", "mandate", "ledger", "delegation", "policy", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.1.0",
    "caracal-sdk>=0.1.0",
    "pyyaml>=6.0",
    "hypothesis>=6.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "pyjwt>=2.8.0",
    "cryptography>=46.0.5",
    "bcrypt>=4.1.0",
    "cachetools>=5.3.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pyperclip>=1.11.0",
    "age>=0.5.1",
    "textual>=0.47.0",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/Garudex-Labs/caracal"
Documentation = "https://github.com/Garudex-Labs/caracal/blob/main/README.md"
Repository = "https://github.com/Garudex-Labs/caracal"
Issues = "https://github.com/Garudex-Labs/caracal/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
caracal = "caracal.runtime.entrypoints:caracal_entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["caracal*"]



[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

# Monorepo: resolve the Python SDK from the repo instead of PyPI (caracal-sdk may be unpublished).
[tool.uv.sources]
caracal-sdk = { path = "sdk/python-sdk", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=caracal",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (isolated component testing)",
    "integration: Integration tests (multi-component)",
    "e2e: End-to-end tests (full system)",
    "security: Security-focused tests",
    "property: Property-based tests",
    "asyncio: Async tests",
    "slow: Slow-running tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["caracal"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
    "*/enterprise/*",
    "*/sdk/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "hypothesis.*",
    "click.*",
    "yaml.*",
]
ignore_missing_imports = true
